--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Penn Course Timetable</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <h1>Penn Course Timetable</h1>
     <p>Search for a course!</p>
     <form id="course-search">
-        <input id="course-name" type='text' name='course-name'/>
-        <input type='button' value='Search' onclick='displayFormContents(this.form);return false;' />
+        <input id="course-name" type='text' name="course" action="index.html"/>
+        <input type='submit' value='Search'/>
     </form>
 
     <div id="course-data"></div>
