fixed phys bugs

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Penn Course Timetable</h1>
     <p>Search for a course!</p>
     <form id="course-search">
-        <input id="course-name" type='text' name="course" action="index.html"/>
+        <input id="course-name" type='text' name="course" action="index.html" autocomplete="off"/>
         <input type='submit' value='Search'/>
     </form>
 
